# NativeColorSimulation

./: CMakeLists.txt  README.md
Include/: Board.h  Node.h  Shader.h
src/: Board.cpp  CMakeLists.txt  Node.cpp  main.cpp
src/Shaders/: basicFragmentShader.fs  basicVertexShader.vs
